--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "fontello-cli": "^0.3.0",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~1.0.1",
+    "grunt-compile-handlebars": "^2.0.2",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compass": "~1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-favicons": "^0.8.0",
     "grunt-fontello": "^0.1.3",
-    "fontello-cli": "^0.3.0"
+    "grunt-svg2png": "^0.2.8"
   }
 }
